Add userInfo elements

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -2,6 +2,9 @@
   .flash
   .sidebar
     .userInfo
+      %h2.userInfo__name
+      %a.userInfo__createGroup
+      %a.userInfo__Edit
     .groupLists
   .main
     .groupInfo
