Add groupLists elements

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,6 +6,10 @@
       %a.userInfo__createGroup
       %a.userInfo__Edit
     .groupLists
+      %ul
+        %li.groupLists__list
+        %li.groupLists__list
+        %li.groupLists__list
   .main
     .groupInfo
     .messageView
