Add group info elements

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -12,5 +12,10 @@
         %li.groupLists__list
   .main
     .groupInfo
+      .groupInfo__info
+        %h2.groupname GroupName
+        %p.members member1 member2
+      %a.groupInfo__groupEdit
+
     .messageView
     .messsageForm
