Add messeges elements

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -16,6 +16,11 @@
         %h2.groupname GroupName
         %p.members member1 member2
       %a.groupInfo__groupEdit
-
     .messageView
+      %ul
+        %li
+          %p.username
+          %p.datetime
+          %p.body
+          .image
     .messsageForm
