Modify class name in index.html.haml

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -21,14 +21,14 @@
         %h2.groupInfo__groupname GroupName
         %p.groupInfo__members Members: member1 member2
       %a.groupInfo__edit edit
-    .messageView
+    .message-view
       %ul.messages
         %li.message
           %p.message__username username
           %p.message__created-at 2018/11/22 05:33:24
           %p.message__body texttexttext
           .message__image
-    .messageForm
+    .message-form
       %textarea{placeholder: "type a message", name: "text", cols: "1" }
       %a.messsageForm__imageIcon img
       %input{type: "button"} Send
