--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,37 @@
 @import "./reset";
 @import "./variable";
+
+.side {
+  width: 300px;
+  height: 100vh;
+  float: left;
+  color: #ffffff;
+  background-color: #2f3e51;
+  .user {
+    padding:0 20px;
+    background-color: #253141;
+  }
+
+
+}
+
+.main {
+  width: calc(100vw - 300px);
+  height: 100vh;
+
+  float: right;
+
+  .chat-group {
+    padding: 0 40px;
+    border-bottom : 1px solid #eeeeee;
+  }
+  .message-view {
+    padding: 0 40px;
+
+  }
+  .message-form {
+    padding: 0 40px;
+
+    background-color: #aaaaaa;
+  }
+}
