--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,7 +4,7 @@
     .user
       %h2.user__name username
       %a.user__createGroup
-      %a.user__Edit Edit
+      / %a.user__Edit Edit
     %ul.chat-groups
       %li.chat-group
         %p.chat-group__name group1
