Edit chat-group css propety

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -17,10 +17,10 @@
         %p.chat-group__message message33
   .main
     .chat-group
-      .groupInfo
-        %h2.groupInfo__groupname GroupName
-        %p.groupInfo__members Members: member1 member2
-      %a.groupInfo__edit edit
+      .group-info
+        %h2.group-info__groupname GroupName
+        %p.group-info__members Members: member1 member2
+      %a.chat-group__edit Edit
     .message-view
       %ul.messages
         %li.message
