--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
   background-color: #2f3e51;
   .user {
     padding:0 20px;
-    height: 96px;
+    height: 100px;
     background-color: #253141;
     &__name{
       font-size: 16px;
@@ -42,9 +42,32 @@
 
   .chat-group {
     padding: 0 40px;
-    height: 96px;
+    height: 100px;
     background-color: #ffffff;
     border-bottom : 1px solid #eeeeee;
+    .group-info{
+      float: left;
+      &__groupname{
+        padding-top: 35px;
+
+        font-size: 20px;
+        color: #333333;
+      }
+      &__members {
+        padding-top: 15px;
+        font-size: 12px;
+        color: #999999;
+      }
+    }
+    &__edit{
+      float: right;
+      height:40px;
+      padding: 0 20px;
+      margin-top: 28px;
+      line-height: 40px;
+      color: #38aef0;
+      border: 2px solid #38aef0;
+    }
   }
   .message-view {
     padding: 0 40px;
