edit message-view propety

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -28,6 +28,11 @@
           %p.message__created-at 2018/11/22 05:33:24
           %p.message__body texttexttext
           .message__image
+        %li.message
+          %p.message__username username
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
     .message-form
       %textarea{placeholder: "type a message", name: "text", cols: "1" }
       %a.messsageForm__imageIcon img
