--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,6 @@
       float: left;
       &__groupname{
         padding-top: 35px;
-
         font-size: 20px;
         color: #333333;
       }
@@ -71,7 +70,23 @@
   }
   .message-view {
     padding: 0 40px;
-
+    .message{
+      padding-top: 40px;
+      &__username {
+        font-size: 16px;
+        font-weight: bold;
+        color: #434a54;
+      }
+      &__created-at {
+        font-size: 12px;
+        color: #999999;
+      }
+      &__body {
+        font-size: 14px;
+        color: #434a54;
+        padding-top: 10px;
+      }
+    }
   }
   .message-form {
     padding: 0 40px;
