--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,10 +76,12 @@
         font-size: 16px;
         font-weight: bold;
         color: #434a54;
+        display: inline;
       }
       &__created-at {
         font-size: 12px;
         color: #999999;
+        display: inline;
       }
       &__body {
         font-size: 14px;
