--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,14 +7,17 @@
       / %a.user__Edit Edit
     %ul.chat-groups
       %li.chat-group
-        %p.chat-group__name group1
-        %p.chat-group__message message11
+        %a.chat-group__link{href: "#"}
+          %p.chat-group__name group1
+          %p.chat-group__message message11
       %li.chat-group
-        %p.chat-group__name group2
-        %p.chat-group__message message22
+        %a.chat-group__link{href: "#"}
+          %p.chat-group__name group2
+          %p.chat-group__message message22
       %li.chat-group
-        %p.chat-group__name group3
-        %p.chat-group__message message33
+        %a.chat-group__link{href: "#"}
+          %p.chat-group__name group3
+          %p.chat-group__message message33
   .main
     .chat-group
       .group-info
