--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -19,11 +19,11 @@
           %p.chat-group__name group3
           %p.chat-group__message message33
   .main
-    .chat-group
+    .group
       .group-info
         %h2.group-info__groupname GroupName
         %p.group-info__members Members: member1 member2
-      %a.chat-group__edit Edit
+      %a.group__edit Edit
     .message-view
       %ul.messages
         %li.message
