--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import "./reset";
 @import "./variable";
 
+.wrapper {
+  min-width: 960px;
+}
 .side {
   width: 300px;
   /*height: 100vh;*/
@@ -42,7 +45,7 @@
   }
 }
 .main {
-  width: calc(100vw - 300px);
+  width: calc(100% - 300px);
   height: 100vh;
   position: relative;
   float: left;
