--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,7 +3,9 @@
   .side
     .user
       %h2.user__name username
-      %a.user__createGroup
+      %i.fa.fa-pencil-square-o
+      %i.fa.fa-cog
+
       / %a.user__Edit Edit
     %ul.chat-groups
       %li.chat-group
