--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,16 @@
     padding:0 20px;
     height: 100px;
     background-color: #253141;
-    &__name{
+    &__name {
       display: inline;
       font-size: 16px;
       font-weight: bold;
+      line-height: 100px;
+      float: left;
+    }
+    .fa {
+      float: right;
+      margin-left: 5px;
       line-height: 100px;
     }
   }
