--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,7 +59,7 @@
   float: left;
   background-color: #fafafa;
 }
-.group {
+.header {
   padding: 0 40px;
   height: 100px;
   background-color: #ffffff;
@@ -77,7 +77,7 @@
       color: #999999;
     }
   }
-  &__edit{
+  .group-edit{
     float: right;
     height:40px;
     padding: 0 20px;
@@ -109,35 +109,36 @@
     }
   }
 }
-
-.message-form {
+.footer{
   width: 100%;
   height: 90px;
   position: absolute;
   left: 0;
   bottom: 0;
   background-color: #dddddd;
-  &__textarea {
-    padding-left:10px;
-    height: 50px;
-    line-height: 50px;
-    width: calc(100% - 150px - 105px);
-    float: left;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    resize: none;
-  }
-  &__button {
-    color: #ffffff;
-    background-color: #38aef0;
-    height: 50px;
-    width: 150px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 40px;
-    padding:0 20px;
-    float: right;
+  .message-form {
+    &__textarea {
+      padding-left:10px;
+      height: 50px;
+      line-height: 50px;
+      width: calc(100% - 150px - 105px);
+      float: left;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-left: 20px;
+      resize: none;
+    }
+    &__button {
+      color: #ffffff;
+      background-color: #38aef0;
+      height: 50px;
+      width: 150px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-right: 40px;
+      padding:0 20px;
+      float: right;
+    }
   }
 }
 
