--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -36,6 +36,51 @@
           %p.message__created-at 2018/11/22 05:33:25
           %p.message__body texttexttext22
           .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
+        %li.message
+          %p.message__username username2
+          %p.message__created-at 2018/11/22 05:33:25
+          %p.message__body texttexttext22
+          .message__image
     .footer
       %form.message-form
         %textarea.message-form__textarea{placeholder: "type a message", name: "text", cols: "1" }
