--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,7 +89,7 @@
 }
 .message-view {
   padding: 0 40px;
-  height: calc(100vh - (100px -90px));
+  height: calc(100% - (100px + 90px));
   overflow: auto;
   .message{
     padding-top: 40px;
@@ -123,7 +123,7 @@
       padding-left:10px;
       height: 50px;
       line-height: 50px;
-      width: calc(100% - 150px - 105px);
+      width: calc(100% - (150px + 105px));
       float: left;
       margin-top: 20px;
       margin-bottom: 20px;
