Modify scss to add image icon and positipn fix
イメージアイコンの設置と位置調整
テキストエリアの調整も実施

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,21 +120,29 @@
   background-color: #dddddd;
   .message-form {
     &__textarea {
-      padding-left:10px;
+      padding-left: 10px;
       height: 50px;
       line-height: 50px;
-      width: calc(100% - (150px + 105px));
+      width: calc(100% - (205px));
       float: left;
       margin-top: 20px;
       margin-bottom: 20px;
-      margin-left: 20px;
+      margin-left: 40px;
       resize: none;
+    }
+    .fa-image {
+      position: absolute;
+      display: inline-block;
+      line-height: 90px;
+      top: 0;
+      right: 165px;
+      bottom: 0;
     }
     &__button {
       color: #ffffff;
       background-color: #38aef0;
       height: 50px;
-      width: 150px;
+      width: 100px;
       margin-top: 20px;
       margin-bottom: 20px;
       margin-right: 40px;
