--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -23,7 +23,7 @@
       .group-info
         %h2.group-info__groupname GroupName
         %p.group-info__members Members: member1 member2
-      %a.group-edit Edit
+      %a.group-edit{href: "#"} Edit
     .message-view
       %ul.messages
         %li.message
