Create partial scss files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,154 +2,12 @@
 @import "./variable";
 @import "font-awesome";
 
+@import "./side";
+@import "./main";
+@import "./header";
+@import "./message-view";
+@import "./footer";
+
 .wrapper {
   min-width: 960px;
 }
-.side {
-  width: 300px;
-  /*height: 100vh;*/
-  float: left;
-  color: #ffffff;
-  background-color: #2f3e51;
-  .user {
-    padding:0 20px;
-    height: 100px;
-    background-color: #253141;
-    &__name {
-      display: inline;
-      font-size: 16px;
-      font-weight: bold;
-      line-height: 100px;
-      float: left;
-    }
-    .fa {
-      float: right;
-      margin-left: 5px;
-      line-height: 100px;
-    }
-  }
-  .chat-groups {
-    height: calc(100vh - 100px);
-    border: 0px solid;
-    .chat-group {
-      background-color: #2f3e51;
-      &:hover{
-        background-color: #3b4a60;
-      }
-      &__link{
-        text-decoration: none;
-        color: #ffffff;
-      }
-      &__name{
-        padding: 20px 20px 0;
-        font-size: 15px;
-        padding-bottom: 5px;
-      }
-      &__message{
-        padding: 5px 20px 20px;
-        font-size: 11px;
-      }
-    }
-  }
-}
-.main {
-  width: calc(100% - 300px);
-  height: 100vh;
-  position: relative;
-  float: left;
-  background-color: #fafafa;
-}
-.header {
-  padding: 0 40px;
-  height: 100px;
-  background-color: #ffffff;
-  border-bottom: 1px solid #eeeeee;
-  .group-info {
-    float: left;
-    &__groupname {
-      padding-top: 35px;
-      font-size: 20px;
-      color: #333333;
-    }
-    &__members {
-      padding-top: 15px;
-      font-size: 12px;
-      color: #999999;
-    }
-  }
-  .group-edit {
-    float: right;
-    height:40px;
-    padding: 0 20px;
-    margin-top: 28px;
-    text-decoration: none;
-    line-height: 40px;
-    color: #38aef0;
-    border: 2px solid #38aef0;
-  }
-}
-.message-view {
-  padding: 0 40px;
-  height: calc(100% - 190px);
-  overflow: auto;
-  .message{
-    padding-top: 40px;
-    &__username {
-      font-size: 16px;
-      font-weight: bold;
-      color: #434a54;
-      display: inline;
-    }
-    &__created-at {
-      font-size: 12px;
-      color: #999999;
-      display: inline;
-    }
-    &__body {
-      font-size: 14px;
-      color: #434a54;
-      padding-top: 10px;
-    }
-  }
-}
-.footer {
-  width: 100%;
-  height: 90px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: #dddddd;
-  .message-form {
-    &__textarea {
-      padding-left: 10px;
-      height: 50px;
-      line-height: 50px;
-      width: calc(100% - 205px);
-      float: left;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      margin-left: 40px;
-      resize: none;
-    }
-    .fa-image {
-      position: absolute;
-      display: inline-block;
-      line-height: 90px;
-      top: 0;
-      right: 165px;
-      bottom: 0;
-    }
-    &__button {
-      color: #ffffff;
-      background-color: #38aef0;
-      height: 50px;
-      width: 100px;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      margin-right: 40px;
-      padding:0 20px;
-      float: right;
-    }
-  }
-}
-
