--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -5,7 +5,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  background-color: #dddddd;
+  background-color: $formBackgroundColor;
   .message-form {
     &__textarea {
       padding-left: 10px;
@@ -32,7 +32,7 @@
     }
     &__button {
       color: #ffffff;
-      background-color: #38aef0;
+      background-color: $skyBlueColor;
       height: 50px;
       width: 100px;
       margin-top: 20px;
