--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,7 +1,7 @@
 .header {
   padding: 0 40px;
   height: 100px;
-  background-color: #ffffff;
+  background-color: $headerBackgroundColor;
   border-bottom: 1px solid #eeeeee;
   .group-info {
     float: left;
@@ -13,7 +13,7 @@
     &__members {
       padding-top: 15px;
       font-size: 12px;
-      color: #999999;
+      color: $grayTextColor;
     }
   }
   .group-edit {
@@ -23,7 +23,7 @@
     margin-top: 28px;
     text-decoration: none;
     line-height: 40px;
-    color: #38aef0;
-    border: 2px solid #38aef0;
+    color: $skyBlueColor;
+    border: 2px solid $skyBlueColor;
   }
 }
