--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -5,4 +5,4 @@ $grayTextColor:#999999;
 $headerBackgroundColor: #ffffff;
 $chatViewBackgroundColor: #fafafa;
 $formBackgroundColor: #dddddd;
-$sideBackgroundColor:;
+$sideBackgroundColor: #2f3e51;
