--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,92 +1,6 @@
-.flash チャットグループが作成されました。
 .wrapper
-  .side
-    .user
-      %h2.user__name username
-      %i.fa.fa-cog
-      %i.fa.fa-pencil-square-o
-    %ul.chat-groups
-      %li.chat-group
-        %a.chat-group__link{href: "#"}
-          %p.chat-group__name group1
-          %p.chat-group__message message11
-      %li.chat-group
-        %a.chat-group__link{href: "#"}
-          %p.chat-group__name group2
-          %p.chat-group__message message22
-      %li.chat-group
-        %a.chat-group__link{href: "#"}
-          %p.chat-group__name group3
-          %p.chat-group__message message33
-  .main
-    .header
-      .group-info
-        %h2.group-info__groupname GroupName
-        %p.group-info__members Members: member1 member2
-      %a.group-edit{href: "#"} Edit
-    .message-view
-      %ul.messages
-        %li.message
-          %p.message__username username1
-          %p.message__created-at 2018/11/22 05:33:24
-          %p.message__body texttexttext11
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-        %li.message
-          %p.message__username username2
-          %p.message__created-at 2018/11/22 05:33:25
-          %p.message__body texttexttext22
-          .message__image
-    .footer
-      %form.message-form
-        %textarea.message-form__textarea{placeholder: "type a message", name: "text", cols: "1" }
-        / %a.messageForm__imageIcon
-        %label.image-upload
-          %i.fa.fa-image
-          %input{type: "file", name: "image", style: "display: none"}
-        %input.message-form__button{type: "button", name: "submit",value: "Send"}
+  =render partial: "flash"
+  =render partial: "side"
+  =render partial: "main"
+
 
