--- a/app/assets/stylesheets/_side.scss
+++ b/app/assets/stylesheets/_side.scss
@@ -4,11 +4,11 @@
   float: left;
   color: #ffffff;
   background-color: $sideBackgroundColor;
-  .user {
+  .side-header {
     padding:0 20px;
     height: 100px;
     background-color: #253141;
-    &__name {
+    &__username {
       display: inline;
       font-size: 16px;
       font-weight: bold;
@@ -19,6 +19,7 @@
       float: right;
       margin-left: 5px;
       line-height: 100px;
+      color: #ffffff;
     }
   }
   .chat-groups {
