--- a/app/views/messages/_side.html.haml
+++ b/app/views/messages/_side.html.haml
@@ -1,18 +1,21 @@
 .side
-  .user
-    %h2.user__name username
-    %i.fa.fa-cog
-    %i.fa.fa-pencil-square-o
-  %ul.chat-groups
-    %li.chat-group
-      %a.chat-group__link{href: "#"}
-        %p.chat-group__name group1
-        %p.chat-group__message message11
-    %li.chat-group
-      %a.chat-group__link{href: "#"}
-        %p.chat-group__name group2
-        %p.chat-group__message message22
-    %li.chat-group
-      %a.chat-group__link{href: "#"}
-        %p.chat-group__name group3
-        %p.chat-group__message message33
+  .side-header
+    %h2.side-header__username username
+    = link_to("#" , class: "icon") do
+      = fa_icon "cog"
+    = link_to("#" , class: "icon") do
+      = fa_icon "pencil-square-o"
+  .side-menu
+    %ul.chat-groups
+      %li.chat-group
+        = link_to("#",class: "chat-group__link") do
+          %p.chat-group__name group1
+          %p.chat-group__message message11
+      %li.chat-group
+        = link_to("#",class: "chat-group__link") do
+          %p.chat-group__name group2
+          %p.chat-group__message message22
+      %li.chat-group
+        = link_to("#",class: "chat-group__link") do
+          %p.chat-group__name group3
+          %p.chat-group__message message33
