--- a/app/views/messages/_side.html.haml
+++ b/app/views/messages/_side.html.haml
@@ -1,7 +1,8 @@
 .side
   .side-header
-    %h2.side-header__username username
-    = link_to("#" , class: "icon") do
+    %h2.side-header__username
+      = current_user.name
+    = link_to(edit_user_path(current_user), class: "icon") do
       = fa_icon "cog"
     = link_to("#" , class: "icon") do
       = fa_icon "pencil-square-o"
