--- a/app/assets/stylesheets/_flash.scss
+++ b/app/assets/stylesheets/_flash.scss
@@ -2,5 +2,10 @@
   height: 20px;
   text-align: center;
   color: #ffffff;
-  background-color: $skyBlueColor;
+  &__alert{
+    background-color: red;
+  }
+  &__notice{
+    background-color: $skyBlueColor;
+  }
 }
