--- a/app/views/messages/_side.html.haml
+++ b/app/views/messages/_side.html.haml
@@ -2,10 +2,13 @@
   .side-header
     %h2.side-header__username
       = current_user.name
-    = link_to(edit_user_path(current_user), class: "icon") do
-      = fa_icon "cog"
-    = link_to("#" , class: "icon") do
-      = fa_icon "pencil-square-o"
+    %ul.header__lists
+      %li.list
+        = link_to(edit_user_path(current_user), class: "icon") do
+          = fa_icon "cog"
+      %li.list
+        = link_to(new_group_path , class: "icon") do
+          = fa_icon "pencil-square-o"
   .side-menu
     %ul.chat-groups
       %li.chat-group
