--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,16 +1,20 @@
 .chat-group-form
   %h1 新規チャットグループ
-  %form#new_chat_group.new_chat_group{"accept-charset": "UTF-8", action: "/chat_groups", method: "post"}
-    .chat-group-form__errors
+  =form_for @group do |f|
+    / %form#new_chat_group.new_chat_group{"accept-charset": "UTF-8", action: "/chat_groups", method: "post"}
+    .chat-group-form__errors{style: "display: none"}
       %h2
         1件のエラーが発生しました。
         %ul
           %li エラーです
+    }
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        %label.chat-group-form__label{for: "chat_group_name"} グループ名
+        = f.label :name, 'グループ名', class: "chat-group-form__label"
+        / %label.chat-group-form__label{for: "chat_group_name"} グループ名
       .chat-group-form__field--right
-        %input#chat_group_name.chat-group-form__input{name: "chat_group[name]", placeholder: "グループ名を入力してください", type: "text"}/
+        = f.text_field :name, placeholder: 'グループ名を入力してください',id: 'chat_group_name',class: "chat-group-form__input"
+        / %input#chat_group_name.chat-group-form__input{name: "chat_group[name]", placeholder: "グループ名を入力してください", type: "text"}/
     .chat-group-form__field.clearfix
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
       /
@@ -25,8 +29,10 @@
         </div>
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        %label.chat-group-form__label{for: "chat_group_チャットメンバー"} チャットメンバー
+        = f.label :members, 'チャットメンバー', class: "chat-group-form__label"
       .chat-group-form__field--right
+        = f.collection_check_boxes(:user_ids,User.all, :id, :name) do |b|
+          =b.label {b.check_box + b.text}
         / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
         / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
         /
@@ -39,4 +45,4 @@
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
-        %input.chat-group-form__action-btn{"data-disable-with": "Save", name: "commit", type: "submit", value: "Save"}/
+        = f.submit  "Save", class: "chat-group-form__action-btn"
