--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,13 +1,12 @@
 .chat-group-form
   %h1 新規チャットグループ
   =form_for @group do |f|
-    / %form#new_chat_group.new_chat_group{"accept-charset": "UTF-8", action: "/chat_groups", method: "post"}
-    .chat-group-form__errors{style: "display: none"}
-      %h2
-        1件のエラーが発生しました。
+    - if @group.errors.any?
+      .chat-group-form__errors
+        %h2 = "#{@group.errors.full_messages.count}件のエラーが発生しました。"
         %ul
-          %li エラーです
-    }
+          - @group.errors.full_messages.each do |message|
+            %li= message
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label :name, 'グループ名', class: "chat-group-form__label"
@@ -31,8 +30,7 @@
       .chat-group-form__field--left
         = f.label :members, 'チャットメンバー', class: "chat-group-form__label"
       .chat-group-form__field--right
-        = f.collection_check_boxes(:user_ids,User.all, :id, :name) do |b|
-          =b.label {b.check_box + b.text}
+        = f.collection_check_boxes(:user_ids,User.all, :id, :name)
         / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
         / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
         /
