--- a/app/views/messages/_side.html.haml
+++ b/app/views/messages/_side.html.haml
@@ -11,15 +11,9 @@
           = fa_icon "pencil-square-o"
   .side-menu
     %ul.chat-groups
-      %li.chat-group
-        = link_to("#",class: "chat-group__link") do
-          %p.chat-group__name group1
-          %p.chat-group__message message11
-      %li.chat-group
-        = link_to("#",class: "chat-group__link") do
-          %p.chat-group__name group2
-          %p.chat-group__message message22
-      %li.chat-group
-        = link_to("#",class: "chat-group__link") do
-          %p.chat-group__name group3
-          %p.chat-group__message message33
+      -current_user.groups.each do |group|
+        %li.chat-group
+          = link_to(group_messages_path(group),class: "chat-group__link") do
+            %p.chat-group__name= group.name
+            %p.chat-group__message まだメッセージはありません。
+
