partialize side.html.haml

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,6 +1,6 @@
 .wrapper
   =render partial: "layouts/flash"
-  =render partial: "side"
+  =render partial: "shared/side"
   =render partial: "main"
 
 
