Edit message controller

--- a/app/views/messages/_main.html.haml
+++ b/app/views/messages/_main.html.haml
@@ -5,34 +5,17 @@
       %p.group-info__members Members: member1 member2
     = link_to "Edit","#", class: "group-edit"
   .chat-area
-    %ul.messages
-      %li.message
-        %p.message__username username1
-        %p.message__created-at 2018/11/22 05:33:24
-        %p.message__body text1
-        .message__image
-      %li.message
-        %p.message__username username2
-        %p.message__created-at 2018/11/22 05:33:25
-        %p.message__body  text2
-        .message__image
-      %li.message
-        %p.message__username username3
-        %p.message__created-at 2018/11/22 05:33:25
-        %p.message__body  text3
-        .message__image
-      %li.message
-        %p.message__username username4
-        %p.message__created-at 2018/11/22 05:33:25
-        %p.message__body text4
-        .message__image
-      %li.message
-        %p.message__username username5
-        %p.message__created-at 2018/11/22 05:33:25
-        %p.message__body text5
-        .message__image
+    -if @messages.present?
+      -@messages.each do |message|
+        %ul.messages
+          %li.message
+            %p.message__username = message.user.name
+            %p.message__created-at = message.created_at
+            %p.message__body = message.body
+            .message__image
+
   .footer
-    %form.message-form
+    =form_for [@group, @message], html: {class: "message-form"} do |f|
       %textarea.message-form__textarea{placeholder: "type a message", name: "body", cols: "1" }
       %label.image-upload
         = fa_icon "picture-o"
