--- a/app/views/shared/_side.html.haml
+++ b/app/views/shared/_side.html.haml
@@ -15,5 +15,6 @@
         %li.chat-group
           = link_to(group_messages_path(group),class: "chat-group__link") do
             %p.chat-group__name= group.name
-            %p.chat-group__message まだメッセージはありません。
+            %p.chat-group__message
+              = group.show_last_message
 
