Add show_members at group-info

--- a/app/views/messages/_main.html.haml
+++ b/app/views/messages/_main.html.haml
@@ -2,7 +2,7 @@
   .main-header
     .group-info
       %h2.group-info__groupname= @group.name
-      %p.group-info__members Members: member1 member2
+      %p.group-info__members= @group.show_members
     = link_to "Edit", "#", class: "group-edit"
   .chat-area
     -@messeges.each do |message|
