--- a/app/views/messages/_main.html.haml
+++ b/app/views/messages/_main.html.haml
@@ -13,7 +13,8 @@
     =form_for [@group, @message], html: {class: "message-form"} do |f|
 
       = f.text_field :body, placeholder: 'type a message',class: "message-form__textarea", cols: "1"
-      %label.image-upload{for: "upload-icon"}
+      / %label.image-upload{for: "upload-icon"}
+      =f.label :image, class: 'image-upload' do
         = fa_icon "picture-o", class: 'icon'
-        = f.file_field :image, id: "upload-icon", style: "display: none"
+        = f.file_field :image, style: "display: none"
       = f.submit 'Send', class: "message-form__button"
