Rename message body to content

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -53,7 +53,7 @@
       color: $grayTextColor;
       display: inline;
     }
-    &__body {
+    &__content {
       font-size: 14px;
       color: $chatTextColor;
       padding-top: 10px;
