--- a/app/views/messages/_main.html.haml
+++ b/app/views/messages/_main.html.haml
@@ -12,7 +12,7 @@
   .footer
     =form_for [@group, @message], html: {class: "message-form"} do |f|
 
-      = f.text_field :body, placeholder: 'type a message',class: "message-form__textarea", cols: "1"
+      = f.text_field :content, placeholder: 'type a message',class: "message-form__textarea", cols: "1"
       / %label.image-upload{for: "upload-icon"}
       =f.label :image, class: 'image-upload' do
         = fa_icon "picture-o", class: 'icon'
