--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,8 +3,8 @@
     = message.user.name
   %p.message__created-at
     = message.created_at.in_time_zone('Asia/Tokyo').strftime('%Y/%m/%d %H:%M:%S')
-  - if message.body.present?
-    %p.message__body
-      = message.body
+  - if message.content.present?
+    %p.message__content
+      = message.content
   - if message.image.present?
     = image_tag message.image.to_s, class: 'message__image'
