Modify form class

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -68,7 +68,7 @@
   left: 0;
   bottom: 0;
   background-color: $formBackgroundColor;
-  .message-form {
+ .new_message {
     &__textarea {
       padding-left: 10px;
       height: 50px;
