--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -8,22 +8,16 @@
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :name, 'グループ名', class: "chat-group-form__label"
-      / %label.chat-group-form__label{for: "chat_group_name"} グループ名
     .chat-group-form__field--right
       = f.text_field :name, placeholder: 'グループ名を入力してください',id: 'chat_group_name',class: "chat-group-form__input"
-      / %input#chat_group_name.chat-group-form__input{name: "chat_group[name]", placeholder: "グループ名を入力してください", type: "text"}/
   .chat-group-form__field.clearfix
-    / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-    /
-      <div class='chat-group-form__field--left'>
-      <label class="chat-group-form__label" for="chat_group_チャットメンバーを追加">チャットメンバーを追加</label>
-      </div>
-      <div class='chat-group-form__field--right'>
-      <div class='chat-group-form__search clearfix'>
-      <input class='chat-group-form__input' id='user-search-field' placeholder='追加したいユーザー名を入力してください' type='text'>
-      </div>
-      <div id='user-search-result'></div>
-      </div>
+    .chat-group-form__field--left
+      = f.label :users, 'チャットメンバーを追加', class: 'chat-group-form__label'
+    .chat-group-form__field--right
+      .chat-group-form__search.clearfix
+        = f.text_field :users, class: 'chat-group-form__input', id: 'user-search-field',placeholder: '追加したいユーザー名を入力してください', value: ""
+      #user-search-result
+
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :members, 'チャットメンバー', class: "chat-group-form__label"
