--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -16,22 +16,18 @@
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
         = f.text_field "add_users", class: 'chat-group-form__input', id: 'user-search-field',placeholder: '追加したいユーザー名を入力してください', value: ""
-      #user-search-result
+        #user-search-result
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :members, 'チャットメンバー', class: "chat-group-form__label"
     .chat-group-form__field--right
-      = f.collection_check_boxes(:user_ids,User.all, :id, :name)
-      / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-      / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-      /
-        <div id='chat-group-users'>
-        <div class='chat-group-user clearfix' id='chat-group-user-22'>
-        <input name='chat_group[user_ids][]' type='hidden' value='22'>
-        <p class='chat-group-user__name'>seo_kyohei</p>
-        </div>
-        </div>
+      #chat-group-users
+        -@group.users.each do |user|
+          .chat-group-user.clearfix.js-chat-member{id: "chat-group-user-#{user.id}"}
+            = f.hidden_field :user_ids, {value: "#{user.id}"}
+            %p.chat-group-user__name=user.name
+            %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
