--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -17,7 +17,6 @@
       .chat-group-form__search.clearfix
         = f.text_field "add_users", class: 'chat-group-form__input', id: 'user-search-field',placeholder: '追加したいユーザー名を入力してください', value: ""
         #user-search-result
-
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :members, 'チャットメンバー', class: "chat-group-form__label"
@@ -25,7 +24,7 @@
       #chat-group-users
         -@group.users.each do |user|
           .chat-group-user.clearfix.js-chat-member{id: "chat-group-user-#{user.id}"}
-            = f.hidden_field :user_ids, {value: "#{user.id}"}
+            = f.hidden_field :name, {name: "group[user_ids][]",value: "#{user.id}"}
             %p.chat-group-user__name=user.name
             %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
   .chat-group-form__field.clearfix
