--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -7,4 +7,5 @@
     %p.message__content
       = message.content
   - if message.image.present?
-    = image_tag message.image.to_s, class: 'message__image'
+    .message__image
+      = image_tag message.image.to_s, class: 'message__image'
